--- a/app/src/main/res/layout/content_events.xml
+++ b/app/src/main/res/layout/content_events.xml
@@ -7,29 +7,9 @@
     tools:showIn="@layout/app_bar_events" tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <!--
-    <android.support.v7.widget.CardView
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorSecondary">
-        
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:src="@drawable/gms_logo"/>
-
-        </LinearLayout>
-        
-    </android.support.v7.widget.CardView>
-    -->
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rv"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></FrameLayout>
 
 </LinearLayout>
