--- a/app/src/main/res/menu/activity_events_drawer.xml
+++ b/app/src/main/res/menu/activity_events_drawer.xml
@@ -2,22 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
+        <item android:id="@+id/nav_events"
+            android:title="Upcoming Events" />
+        <item android:id="@+id/nav_favorites"
+            android:title="Favorites" />
+        <!--
         <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
             android:title="Slideshow" />
         <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
             android:title="Tools" />
+            -->
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="About">
         <menu>
-            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
-                android:title="Send" />
+            <item android:id="@+id/nav_about_gms"
+                android:title="Global Meditation Scope" />
+            <item android:id="@+id/nav_about_medi"
+                android:title="Meditation" />
         </menu>
     </item>
 
