Added ability to add favorites.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#36a2bf</color>
     <color name="colorPrimaryDark">#2f86a4</color>
-    <color name="colorAccent">#00c6b8</color>
+    <color name="colorAccent">#DB5248</color>
     <color name="colorSecondary">#7B289F</color>
 </resources>
