--- a/app/src/main/res/menu/activity_events_drawer.xml
+++ b/app/src/main/res/menu/activity_events_drawer.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+        <item android:id="@+id/nav_categories"
+            android:title="Categories" />
         <item android:id="@+id/nav_events"
             android:title="Upcoming Events" />
         <item android:id="@+id/nav_favorites"
