--- a/app/src/main/res/layout/category_grid.xml
+++ b/app/src/main/res/layout/category_grid.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
             android:textAlignment="center"
             android:text="Meditation Category"
             android:textAllCaps="true"
