--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -28,7 +28,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        app:civ_border_width="5dp"
+                        app:civ_border_color="@color/colorSecondary"
                         android:id="@+id/event_image"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
