--- a/app/src/main/res/layout/fragment_intro_slide_page.xml
+++ b/app/src/main/res/layout/fragment_intro_slide_page.xml
@@ -18,6 +18,7 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/intro_image"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_weight="2"
