--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -22,7 +22,7 @@
             android:id="@+id/skip_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SKIP"
+            android:text="@string/intro_skip"
             android:textColor="@color/white"
             android:background="@color/colorPrimary"
             android:layout_weight="1" />
@@ -31,7 +31,7 @@
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NEXT"
+            android:text="@string/intro_next"
             android:textColor="@color/white"
             android:background="@color/colorPrimary"
             android:layout_weight="1"/>
