--- a/app/src/main/res/layout/nav_header_events.xml
+++ b/app/src/main/res/layout/nav_header_events.xml
@@ -21,12 +21,12 @@
     </RelativeLayout>
 
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Global Meditation Scope"
+        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="@string/app_name"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="December 12-13, 2015" android:id="@+id/textView" />
+        android:text="@string/nav_header_dates" android:id="@+id/textView" />
 
 </LinearLayout>
