--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimary"
-    tools:context="space.darkowlzz.globalmeditationscope.CoverActivity">
+    tools:context=".activities.CoverActivity">
 
     <ImageView
         android:id="@+id/logo"
